syntax = "proto3";

option go_package = "common/interface/novel_iface";


enum NovelStatus {
    NOVEL_NONE = 0;
    NOVEL_ENABLED = 1; // 启用监控
    NOVEL_DISABLED = 2; // 手动禁止监控
    NOVEL_SUCCESS = 3; // 连续N次未发生变化，停止监控
    NOVEL_ERROR = 4; // 连续N次错误, 停止监控
}


enum ScanStatus {
    SCAN_NONE = 0;
    SCAN_PENDING = 1;
    SCAN_RUNNING = 2;
    SCAN_SUCCESS = 3;
    SCAN_ERROR = 4;
}
